# rust-samples-for-learning

./: README.md
async-event-emitter/: Cargo.toml  REAME.md
async-event-emitter/src/: main.rs
auth/: README.md  sample.env
auth/postgres/init-scripts/: 001_init-app-user-db.sh
auth/src/: auth.rs  handler.rs  logger.rs  main.rs
chat/: Cargo.toml  README.md  rustfmt.toml
chat/src/: chat_core.rs  lib.rs
crud/: Cargo.toml  README.md
crud/src/: data.rs
long-polling/: Cargo.toml  README.md  client.sh
long-polling/src/: main.rs
webrtc-simple-mpmc/: README.md
webrtc-simple-mpmc/client/: package-lock.json  package.json  tsconfig.json  webpack.config.js
webrtc-simple-mpmc/client/public/: index.html
webrtc-simple-mpmc/client/src/: App.vue
webrtc-simple-mpmc/sfu/: Cargo.toml  sample.env
webrtc-simple-mpmc/sfu/src/: errors.rs  handler.rs  main.rs
