[package]
name = "chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.*", features=["full"]}
uuid = { version = "0.8.*", features = ["serde", "v4"] }

# for ws
tokio-stream = { version = "0.1.*" }
warp = { version = "0.3.*" }
futures = { version = "0.3.*", default-features = false }