[package]
name = "long-polling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.*" }
warp = { version = "0.3.*" }
tokio = { version = "1.17.*", features=["full"]}
bytes = { version = "1.1.*" }
uuid = { version ="1.0.*", features = ["v4"]}