[package]
name = "sfu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.*", features=["full"]}
uuid = { version = "0.8.*", features = ["serde", "v4"] }
tokio-stream = { version = "0.1.*" }
warp = { version = "0.3.*" }
futures = { version = "0.3.*", default-features = false }
serde = { version = "1.0.*", features = ["derive"]}
serde_json = { version = "1.0.*" }
webrtc = { version = "0.4.*" }
bytes = { version = "1" }
log = { version = "0.4.*" }
env_logger = { version = "0.9.*" }